# FunctionalTakuzu

./: .gitignore  AbstractGameLogic.hs  Main.hs  MainTest.sh  README.md  SudokuLogic.hs  SudokuLogicTest.hs  TicTacLogic.hs  TicTacLogicTest.hs  main.cabal  takuzu.hs  tic-tac-logic.hs
mainTests/2x2/: input.txt  output.txt
mainTests/4x4/: input.txt  result.txt
mainTests/6x6/: input.txt  result.txt
mainTests/8x8/: input.txt  output.txt
mainTests/sudokuEasy/: input.txt  output.txt
